-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8
-
Component/s: client-libs
-
Environment:
solaris11-sparc,jdk8b117(64bit)
-
b122
-
sparc
-
solaris_11
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8030703 | 9 | Alexander Zvegintsev | P2 | Resolved | Fixed | b06 |
| JDK-8031279 | 8u5 | Alexander Zvegintsev | P2 | Resolved | Fixed | b03 |
JDK/JRE tested: jdk-8-ea-solaris-sparcv9.tar.gz (jdk8b117)
OS/architecture: solaris11-sparcv9
Reproducible: Always
Reproducible on machine: stt-60-zone1.ru
Is it a Regression: Not sure
Is it a platform specific issue: Yes
Is it a new (previously unsupported) OS/browser/mode testing: No
Test run log location:http://jsqalab.us.oracle.com/results/Evergreen/8/b117/jck/solaris11-sparc/results/workDir/api/java_awt/interactive/Desktop/BROWSEInteractiveTests_DesktopBrowseTests.jtr
Test run result location:http://jsqalab.us.oracle.com/results/Evergreen/8/b117/jck/solaris11-sparc/results/
Steps to reproduce:
1.Install test bundle jdk8b117 from http://jre.us.oracle.com/java/re/jdk/8/promoted/ea/b117/bundles/solaris-sparcv9/jdk-8-ea-solaris-sparcv9.tar.gz to /workspace/jck
2.Download the JCK-runtime-8.jar from http://jre.sfbay.sun.com/java/re/jck/8/promoted/ea/b35/bundles/ to /workspace/jck and use /workspace/jck/jdk1.8.0/bin/java -jar JCK-runtime-8.jar to unzip it
3.From command line, run the following command:
/workspace/jck/jdk1.8.0/bin/java -showversion -cp /workspace/jck/JCK-runtime-8/classes:/workspace/jck/jdk1.8.0/lib/tools.jar -Djava.security.policy=/workspace/jck/JCK-runtime-8/lib/jck.policy=/workspace/jck/JCK-runtime-8/lib/jck.policy javasoft.sqe.tests.api.java.awt.interactive.Desktop.DesktopBrowseTests -TestCaseID ALL
Descriptions:
This test verifies the ability of the implementation to launch the default browser to display a URI.Enter a string that can be parsed to construct a URI.If the provided string cannot be parsed to construct a URI, the testcase fails.If the default browser is not able to handle the specified URI,the application registered for handling the specified type should be launched.The application is determined from the protocol and path of the URI, as defined by the URI class.If the browser or expected application was eventually launched,and the opened URI is constructed from the provided string, press \"Yes\", otherwise press \"No\".
Actual behavior:
We used Vncviewer to access the system.
The user's default browser can not launch after we click the button,and there has IOException shown in the log txt(java.io.IOException: Failed to show URI:http://www.baidu.com).
Validation:
1).sles10-x86,jdk8b111(32bit) passed
2).mac10.9-x64,jdk8b116(64bit) passed
3)solaris10-x64,jdk8b115(64bit) passed
4).solaris11-sparc,jdk8b116(64bit) failed
- backported by
-
JDK-8030703 The user's default browser can not launch after we click the button, and there is an IOException shown in the log text (java.io.IOException)
-
- Resolved
-
-
JDK-8031279 The user's default browser can not launch after we click the button, and there is an IOException shown in the log text (java.io.IOException)
-
- Resolved
-
- duplicates
-
JDK-8027832 Failed to show URL:http://java.oracle.com/
-
- Closed
-
-
JDK-8031707 Set the mail client(thunderbird) to be default which has been installed on solaris system and select the choice "The system is able to launch the desktop application .....",the case failed automatically.
-
- Closed
-
-
JDK-8027832 Failed to show URL:http://java.oracle.com/
-
- Closed
-
- relates to
-
JDK-8030100 java.awt.Desktop: Enable check for supported URI schemes on Linux
-
- Resolved
-