8029263: user's default browser can not launch after we click the button, and there is an IOException shown in the log text (java.io.IOException)

Reviewed-by: anthony, serb